--- a/pcgrr/vignettes/faq.Rmd
+++ b/pcgrr/vignettes/faq.Rmd
@@ -31,12 +31,12 @@ _Answer: Yes, see_ [an overview of phenotypes associated with primary tumor site
 
 __7. Are there any plans to incorporate genomic biomarker evidence from__ [OncoKB](https://www.oncokb.org) __in PCGR?__
 
-_Answer: No. PCGR relies upon publicly available open-source resources, and further that the PCGR data bundle can be distributed freely to the user community. It is our understanding that_ [OncoKB's terms of use](https://www.oncokb.org/terms) _do not fit well with this strategy._
+_Answer: No. PCGR relies upon publicly available, open-source resources, and further that the PCGR reference bundle can be distributed freely to the user community. It is our understanding that_ [OncoKB's terms of use](https://www.oncokb.org/terms) _do not fit well with this strategy._ 
 
-__8. I have RNA fusion data that I want to include in the report. Is this possible?__
+__8. I have RNA fusion data that I want to analyse and include in the report. Is this possible with PCGR?__
 
-_Answer: This is currently not supported as input for PCGR, but is something we are actively pursuing. The focus will be on whether detected RNA fusion events are previously known, and whether these are known as biomarkers for diagnosis or treatment._
+_Answer: This is currently not supported as input for PCGR, but is something we are actively working on. The focus will be on whether detected RNA fusion events are previously known (i.e. seen in other tumor samples, e.g. from the Mitelman database), and whether some of them are presently in use as biomarkers for diagnosis or treatment._
 
 __9. Is it possible for the users to update the data bundle to get the most recent versions of all underlying data sources?__
 
-_Answer: As of now, the data bundle is updated only with each release of PCGR. The data harmonization pipeline of knowledge databases in PCGR contain numerous and complex procedures, with several quality control and re-formatting steps, and and cannot be fully automated in its present form. The version of all databases and key software elements are outlined in each PCGR report._
+_Answer: As of now, the data bundle is updated only with each release of PCGR. The data harmonization pipeline of knowledge databases in PCGR contain numerous and complex procedures, with several cleaning, quality control, and re-formatting steps, and is semi-automated in its present form. The version of all databases and key software elements are outlined in each PCGR report._
