--- a/pcgrr/vignettes/annotation_resources.Rmd
+++ b/pcgrr/vignettes/annotation_resources.Rmd
@@ -17,7 +17,7 @@ output: rmarkdown::html_document
  
 ### Variant databases of clinical utility
   * [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar/) - database of clinically related variants (June 2024)
-  * [CIViC](http://civic.genome.wustl.edu) - clinical interpretations of variants in cancer (June 6th 2024)
+  * [CIViC](http://civic.genome.wustl.edu) - clinical interpretations of variants in cancer (June 21st 2024)
   * [CGI](http://www.cancergenomeinterpreter.org/biomarkers) - Cancer Genome Interpreter Cancer Biomarkers Database (CGI) (October 18th 2022)
 
 ### Protein domains/functional features
@@ -26,7 +26,7 @@ output: rmarkdown::html_document
 
 ### Knowledge resources on gene and protein targets
   * [CancerMine](https://zenodo.org/record/4925789#.YNT8K5MzY7Q) - Literature-mined database of tumor suppressor genes/proto-oncogenes (v50, March 2023)
-  * [Open Targets Platform](https://www.targetvalidation.org/) - Database on disease-target associations, molecularly targeted drugs and tractability aggregated from multiple sources (literature, pathways, mutations) (2024.03)
+  * [Open Targets Platform](https://www.targetvalidation.org/) - Database on disease-target associations, molecularly targeted drugs and tractability aggregated from multiple sources (literature, pathways, mutations) (2024.06)
 
 ### Notes on variant annotation datasets
 
