--- a/pcgrr/inst/templates/pcgr_quarto_report/expression/expression_similarity.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/expression/expression_similarity.qmd
@@ -1,31 +1,44 @@
 ### Similarity to other tumor samples
 
-Here we show how the gene expression profile of the input RNA sample correlates with samples harvested from other sources. The similarity is calculated using the Spearman's correlation (protein-coding genes only). The table below shows the correlation coefficient for each (external) sample, along with the corresponding diagnosis, tissue/site, sample type, age category etc.
+Here we show how the gene expression profile of the input RNA sample correlates with samples harvested from other sources. The similarity is calculated using the Spearman's correlation (protein-coding genes only). The tables below show the correlation coefficient for each (external) sample, along with the corresponding diagnosis, tissue/site, sample type, age category etc. The tables are sorted by the correlation coefficient in descending order, and only the top 500 samples are shown per source.
 
 ::: {.panel-tabset}
 
 ```{r similarity_table_tcga}
 #| output: asis
-#| eval: !expr as.logical("tcga" %in% names(pcg_report[['content']]$expression[['similarity_analysis']])) == TRUE
+#| eval: !expr as.logical(TRUE %in% stringr::str_detect(names(pcg_report[['content']]$expression[['similarity_analysis']]), 'tcga')) == TRUE
 
 source_name <- 'The Cancer Genome Atlas (TCGA)'
 cat('\n\n#### ',source_name,'\n\n<br>')
 
-dt_similarity_tcga <- 
-  pcg_report[['content']]$expression[['similarity_analysis']][['tcga']] |>
-  dplyr::mutate(CORR = round(CORR, digits = 5)) |>
-  dplyr::select(-c("EXT_SAMPLE_ID2","PROTEIN_CODING_ONLY")) |>
-  dplyr::select(
-    EXT_SAMPLE_ID,
-    EXT_SAMPLE_NAME,
-    CORR,
-    EXT_PRIMARY_DIAGNOSIS,
-    EXT_PRIMARY_SITE,
-    EXT_SAMPLE_TYPE,
-    EXT_AGE_CATEGORY,
-    EXT_GENDER,
-    dplyr::everything()
-  )
+dt_similarity_tcga <- data.frame()
+
+for(cohort in names(pcg_report[['content']]$expression[['similarity_analysis']])){
+  if(grepl('tcga', cohort)){
+    tcga_cohort <- 
+      pcg_report[['content']]$expression[['similarity_analysis']][[cohort]] |>
+      dplyr::mutate(CORR = round(CORR, digits = 5)) |>
+      dplyr::select(-c("EXT_SAMPLE_ID2","PROTEIN_CODING_ONLY")) |>
+      dplyr::select(
+        EXT_SAMPLE_ID,
+        EXT_SAMPLE_NAME,
+        CORR,
+        EXT_PRIMARY_DIAGNOSIS,
+        EXT_PRIMARY_SITE,
+        EXT_SAMPLE_TYPE,
+        EXT_AGE_CATEGORY,
+        EXT_GENDER,
+        dplyr::everything()
+      )
+    
+    dt_similarity_tcga <- dt_similarity_tcga |>
+      dplyr::bind_rows(tcga_cohort)
+  }
+}
+
+dt_similarity_tcga <- dt_similarity_tcga |>
+  dplyr::arrange(desc(CORR)) |>
+  head(500)
 
 DT::datatable(
   dt_similarity_tcga,
@@ -46,7 +59,6 @@ cat('\n\n#### ',source_name,'\n\n<br>')
 
 dt_similarity_depmap <- 
   pcg_report[['content']]$expression[['similarity_analysis']][['depmap']] |>
-  
   dplyr::mutate(CORR = round(CORR, digits = 5)) |>
   dplyr::select(-c("EXT_SAMPLE_ID2","PROTEIN_CODING_ONLY")) |>
   dplyr::mutate(
@@ -64,7 +76,9 @@ dt_similarity_depmap <-
     EXT_AGE_CATEGORY,
     EXT_GENDER,
     dplyr::everything()
-  )
+  ) |>
+  dplyr::arrange(desc(CORR)) |>
+  head(500)
 
 DT::datatable(
   dt_similarity_depmap,
@@ -95,7 +109,9 @@ dt_similarity_treehouse <-
     EXT_AGE_CATEGORY,
     EXT_GENDER,
     dplyr::everything()
-  )
+  ) |>
+  dplyr::arrange(desc(CORR)) |>
+  head(500)
 
 DT::datatable(
   dt_similarity_treehouse,
